# MixMind--AI-DJ

./: .env.example  .gitignore  README.md  ai-dj-spec.md  docker-compose.dev.yml  docker-compose.yml  mixmind-spec.md  start-dev.sh  stop-dev.sh
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 089d97e511d0_create_stems.py  103c84d416bc_create_mix_plans.py  4065b47d2200_create_transcriptions.py  410617d0c244_create_queues_and_queue_items.py  76d2da8e5066_add_pipeline_requested_to_song.py  a2657eccd290_create_lyrics_table.py  ae8d08dfa1e3_create_songs.py  b405ad4bc5e4_create_analyses.py  c1f2a3b4d5e6_add_timeline_to_queue_renders.py  db729e2f9c53_add_vocal_envelope_path.py  dda3b1fbd945_create_queue_renders.py  e7a9c2d4f1b8_add_error_text_to_songs.py  f3a1b2c4d5e6_add_planner_v2_fields_to_mix_plans.py
backend/app/: main.py
backend/app/api/: deps.py  mix_plans.py  queues.py  search.py  songs.py
backend/app/core/: config.py  db.py  redis_client.py
backend/app/models/: __init__.py  analysis.py  lyrics.py  mix_plan.py  queue.py  queue_render.py  song.py  stems.py  transcription.py
backend/app/schemas/: __init__.py  analysis.py  lyrics.py  mix_plan.py  queue.py  queue_render.py  song.py  stems.py  transcription.py
backend/app/services/analysis/: allin1_source.py  key.py  service.py
backend/app/services/analysis/sections/: __init__.py  base.py  factory.py  librosa_laplacian.py
backend/app/services/cache/: eviction.py
backend/app/services/llm/: __init__.py  base.py  digitalocean.py  gemini.py  groq.py  legacy_prompt.py  prompts.py  provider.py
backend/app/services/lyrics/: genius.py
backend/app/services/lyrics_alignment/: __init__.py  aligner.py
backend/app/services/mixer/: __init__.py  archetypes.py  candidates.py  decision.py  executor.py  plan.py  planner_v2.py  types.py  validation.py
backend/app/services/stems/: __init__.py  service.py
backend/app/services/storage/: __init__.py  base.py  factory.py  local.py  s3.py
backend/app/services/transcription/: __init__.py  service.py
backend/app/services/vocal_safety/: __init__.py  safety.py
backend/app/services/youtube/: __init__.py  service.py
backend/app/tests/: conftest.py  test_analysis_service.py  test_analyze_task.py  test_auto_stitch.py  test_cache_eviction.py  test_celery_priorities.py  test_download_task.py  test_genius_service.py  test_key.py  test_llm_digitalocean.py  test_llm_gemini.py  test_llm_groq.py  test_lyrics_aligner.py  test_lyrics_and_safety_api.py  test_lyrics_workers.py  test_mix_plans_api.py  test_mixer_executor.py  test_mixer_plan.py  test_planner_v2.py  test_queue_mix_api.py  test_queues_api.py  test_render_transition_task.py  test_search_api.py  test_section_detector.py  test_separate_task.py  test_songs_api.py  test_stem_separation_service.py  test_stitch_queue_task.py  test_storage.py  test_transcribe_task.py  test_transcription_service.py  test_vocal_safety.py  test_youtube_service.py
backend/app/workers/: __init__.py  align_lyrics.py  analyze.py  auto_stitch.py  download.py  evict_cache.py  fetch_lyrics.py  modal_stubs.py  ping.py  plan_set.py  render_transition.py  separate.py  stitch_queue.py  transcribe.py
backend/scripts/: check_llm_key.py  eval_transitions.py  wipe_storage.py
deploy/: deploy_to_droplet.sh
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/health/: page.tsx
frontend/app/player/: page.tsx
frontend/app/processing/: page.tsx
frontend/components/: DownloadedSongs.tsx  MixPlanDebug.tsx  NavHeader.tsx  Player.tsx  ProcessingView.tsx  QueueBuilder.tsx  QueueItemRow.tsx  SearchPanel.tsx  StemsDebug.tsx  TranscriptionDebug.tsx  TransitionControls.tsx  WaveformDebug.tsx
frontend/e2e/: stubs.ts  three-state-flow.spec.ts
frontend/lib/: api.ts  query-provider.tsx  song-status.ts
(+1 files in other folders)
