[project]
name = "ai-dj-backend"
version = "0.0.0"
description = "AI DJ backend: FastAPI app and Celery workers"
requires-python = ">=3.11,<3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
