[project]
name = "ai-dj-backend"
version = "0.0.0"
description = "AI DJ backend: FastAPI app and Celery workers"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<1.14",
    "psycopg[binary]>=3.2,<3.3",
    "celery[redis]>=5.4,<5.5",
    "redis>=5.0,<6.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "python-dotenv>=1.0,<2.0",
    "yt-dlp>=2026.3.17",
    "librosa>=0.11.0",
    "numpy>=2.4.5",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "demucs>=4.0.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.27,<0.28",
    "ruff>=0.7,<0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
