[project]
name = "mixmind-backend"
version = "0.0.0"
description = "MixMind backend: FastAPI app and Celery workers"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<1.14",
    "psycopg[binary]>=3.2,<3.3",
    "celery[redis]>=5.4,<5.5",
    "redis>=5.0,<6.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "python-dotenv>=1.0,<2.0",
    "yt-dlp>=2026.3.17",
    "librosa>=0.11.0",
    "numpy>=2.4.5",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "aioboto3>=15.5.0",
    "modal>=1.4.3",
    # pyrubberband is needed by services/mixer/executor.py — render_transition
    # runs in the worker container, which on the droplet is the slim image
    # (no torch/demucs/mlx-whisper, since Modal handles those). Pyrubberband
    # is pure-Python over the `rubberband` CLI binary (apt-installed in the
    # Dockerfile), so keeping it in the default deps is cheap and means the
    # docker worker can render mixes.
    "pyrubberband>=0.4.0",
    "httpx>=0.27,<0.28",
    "beautifulsoup4>=4.12,<4.13",
    "asgiref>=3.11.1",
    "google-genai>=1.2.0",
    "groq>=1.4.0",
    "openai>=2.39.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.27,<0.28",
    "ruff>=0.7,<0.8",
]
# Native-worker-only deps. The FastAPI container never imports these
# (api/songs.py + api/queues.py dispatch separate_stems by task name),
# and the dockerized worker on the droplet delegates to Modal — so the
# docker images skip the ~2 GB torch + demucs install. Only the macOS
# native worker pulls these in (start-dev.sh runs `uv sync --group worker`).
worker = [
    "demucs>=4.0.1",
    "mlx-whisper>=0.4.3",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
]

[tool.uv]
# `dev` is installed by default for local development; `worker` must be
# requested explicitly (`uv sync --group worker` or `uv run --group worker`).
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
